output found files for debug cmake

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -56,6 +56,18 @@ set(${PROJECT_NAME}_INCLUDE_DIR "${PROJECT_SOURCE_DIR}/include")
 set(${PROJECT_NAME}_SOURCES_DIR "${PROJECT_SOURCE_DIR}/source")
 file(GLOB_RECURSE PROJECT_HEADERS RELATIVE ${CMAKE_CURRENT_SOURCE_DIR} "${${PROJECT_NAME}_INCLUDE_DIR}/*.h")
 file(GLOB_RECURSE PROJECT_SOURCES RELATIVE ${CMAKE_CURRENT_SOURCE_DIR} "${${PROJECT_NAME}_SOURCES_DIR}/*.cpp")
+message(DEBUG "Headers files for project ${PROJECT_NAME}")
+list(APPEND CMAKE_MESSAGE_INDENT "  ")
+    foreach(file ${PROJECT_HEADERS})
+        message(DEBUG "Found ${file}")
+    endforeach()
+list(POP_BACK CMAKE_MESSAGE_INDENT)
+message(DEBUG "Source files for project ${PROJECT_NAME}")
+list(APPEND CMAKE_MESSAGE_INDENT "  ")
+    foreach(file ${PROJECT_SOURCES})
+        message(DEBUG "Found ${file}")
+    endforeach()
+list(POP_BACK CMAKE_MESSAGE_INDENT)
 add_library(${PROJECT_NAME} SHARED ${PROJECT_HEADERS} ${PROJECT_SOURCES})
 if(MSVC)
     source_group(TREE "${${PROJECT_NAME}_INCLUDE_DIR}" PREFIX "Headers" FILES ${PROJECT_HEADERS})
