--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -80,6 +80,11 @@ endif()
 set(EXTERNAL_LIBS "")
 set(EXTERNAL_DEPS "")
 set(EXTERNAL_DLLS "")
+option(PROJECT_FORCE_THREADS "Force finding and adding Threads library.")
+if(PROJECT_FORCE_THREAD)
+    find_library(Threads REQUIRED)
+    list(APPEND EXTERNAL_LIBS Threads)
+endif()
 if(NOT TORCH_FOUND)
 	find_package(Torch REQUIRED)
 endif()
